fix(overflow-items): infinite visibility update (#DS-3450)

--- a/packages/components-dev/overflow-items/styles.scss
+++ b/packages/components-dev/overflow-items/styles.scss
@@ -1,7 +1,8 @@
 @use '../main';
 
 app {
-    max-width: 800px;
+    width: 700px;
+    max-width: 100%;
     display: block;
     border: 1px solid cyan;
     overflow: hidden;
